# gomoku-cpp23

./: .envrc  .gitignore  CLAUDE.md  CMakeLists.txt  CPP23.md  HTTPD.md  LICENSE  Makefile  NEXT.md  README.md
.cursor/: rules
.github/workflows/: ci.yml
doc/: GOMOKU.md  HTTPD.md
schema/: gomoku.schema.json
src/: CMakeLists.txt  ai.cpp  ai.h  ai_parallel.cpp  ai_parallel.hpp  ansi.h  board.cpp  board.hpp  cli.cpp  cli.hpp  game.cpp  game.h  game_coordinator.cpp  game_coordinator.hpp  game_history.cpp  game_history.hpp  game_state_wrapper.hpp  gomoku.cpp  gomoku.hpp  httpd_cli.cpp  httpd_cli.hpp  httpd_game_api.cpp  httpd_game_api.hpp  httpd_main.cpp  httpd_server.cpp  httpd_server.hpp  main.cpp  player.cpp  player.hpp  ui.cpp  ui.hpp
src/util/: thread_pool.hpp
tests/: CMakeLists.txt  gomoku_test.cpp  httpd_test.cpp  setup
tests/fixtures/: game-log-1.json  test_game_request.json
